tests-integration/tests/snapshots/checking__beta_reduction_const_a.snap
---
source: tests-integration/tests/checking.rs
expression: snapshot
---
(((Λ. (Λ. *1)) rigid-a) rigid-b) ~> rigid-a
