tests-integration/tests/snapshots/checking__beta_reduction_const_b.snap
---
source: tests-integration/tests/checking.rs
expression: snapshot
---
(((Λ. (Λ. *0)) rigid-a) rigid-b) ~> rigid-b
