tests-integration/tests/snapshots/checking__class_basic.snap
---
source: tests-integration/tests/checking.rs
expression: snapshot
---
Terms
show :: forall (a :: Type). ((Show a) => (a -> String))

Types
Show :: (Type -> Constraint)
