tests-integration/tests/snapshots/checking__class_functor.snap
---
source: tests-integration/tests/checking.rs
expression: snapshot
---
Terms
map :: forall (f :: Type -> Type) (a :: Type) (b :: Type). Functor f => (a -> b) -> f a -> f b

Types
Functor :: (Type -> Type) -> Constraint
