tests-integration/tests/snapshots/checking__class_with_signature.snap
---
source: tests-integration/tests/checking.rs
expression: snapshot
---
Terms
map :: forall (t0 :: Type) (t1 :: Type) (f :: (Type -> Type)) (a :: t0) (b :: t1). ((Functor f) => ((a -> b) -> (f a) -> (f b)))

Types
Functor :: ((Type -> Type) -> Constraint)
