tests-integration/tests/snapshots/checking__constrained_invalid_constraint.snap
---
source: tests-integration/tests/checking.rs
expression: checked.errors
---
[
    CheckError {
        kind: CannotUnify {
            t1: Id<checking::core::Type>(1),
            t2: Id<checking::core::Type>(2),
        },
        step: [
            TypeDeclaration(
                Idx::<TypeItem>(1),
            ),
        ],
    },
]
