tests-integration/tests/snapshots/checking__constrained_invalid_type.snap
---
source: tests-integration/tests/checking.rs
expression: checked.errors
---
[
    CheckError {
        kind: CannotUnify {
            t1: Id<checking::core::Type>(16),
            t2: Id<checking::core::Type>(1),
        },
        step: [
            TypeDeclaration(
                Idx::<TypeItem>(1),
            ),
        ],
    },
]
