tests-integration/tests/snapshots/checking__data_arity_fail.snap
---
source: tests-integration/tests/checking.rs
expression: checked.errors
---
[
    CheckError {
        kind: TypeSignatureVariableMismatch {
            id: AstId<syntax::cst::Type>(6),
            expected: 0,
            actual: 0,
        },
        step: [
            TypeDeclaration(
                Idx::<TypeItem>(0),
            ),
        ],
    },
]
